Merge prep